<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              tools:context="com.magnet.demo.mmx.rpsls.GameActivity"
    >

    <TextView
        android:id="@+id/opponent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"/>

    <ViewAnimator
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/viewAnimator"
        android:animateFirstView="true"
        android:inAnimation="@anim/slide_in_right"
        android:outAnimation="@anim/slide_out_left"
        >

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:columnCount="1"
            android:rowCount="3"
            >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_row="0"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                >
                <ImageButton
                    android:id="@+id/choice1"
                    android:layout_width="@dimen/choice_image_btn_width"
                    android:layout_height="@dimen/choice_image_btn_length"
                    android:layout_gravity="center_horizontal"
                    android:scaleType="centerInside"
                    android:contentDescription="@string/choice1_desc"
                    android:onClick="doChoice"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_row="1"
                android:baselineAligned="false"
                android:orientation="horizontal"
                android:paddingTop="5dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                >
                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">
                    <ImageButton
                        android:id="@+id/choice2"
                        android:layout_width="@dimen/choice_image_btn_width"
                        android:layout_height="@dimen/choice_image_btn_length"
                        android:layout_gravity="left"
                        android:scaleType="centerInside"
                        android:contentDescription="@string/choice2_desc"
                        android:onClick="doChoice"
                        />
                </FrameLayout>
                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    >
                    <ImageButton
                        android:id="@+id/choice3"
                        android:layout_width="@dimen/choice_image_btn_width"
                        android:layout_height="@dimen/choice_image_btn_length"
                        android:layout_gravity="right"
                        android:scaleType="centerInside"
                        android:contentDescription="@string/choice3_desc"
                        android:onClick="doChoice"
                        />
                </FrameLayout>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_row="2"
                android:baselineAligned="false"
                android:orientation="horizontal"
                android:paddingTop="20dp"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                >
                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    >
                    <ImageButton
                        android:id="@+id/choice4"
                        android:layout_width="@dimen/choice_image_btn_width"
                        android:layout_height="@dimen/choice_image_btn_length"
                        android:layout_gravity="center_horizontal"
                        android:scaleType="centerInside"
                        android:contentDescription="@string/choice4_desc"
                        android:onClick="doChoice"
                        />
                </FrameLayout>
                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    >
                    <ImageButton
                        android:id="@+id/choice5"
                        android:layout_width="@dimen/choice_image_btn_width"
                        android:layout_height="@dimen/choice_image_btn_length"
                        android:scaleType="centerInside"
                        android:contentDescription="@string/choice5_desc"
                        android:onClick="doChoice"
                        android:layout_gravity="center_horizontal"/>
                </FrameLayout>
            </LinearLayout>

        </GridLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="20dp"
            android:orientation="vertical"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:text="You chose:"/>
                    <ImageView
                        android:id="@+id/my_choice"
                        android:layout_width="@dimen/choice_image_btn_width"
                        android:layout_height="@dimen/choice_image_btn_length"
                        android:paddingTop="5dp"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:text="They chose:"/>
                    <ProgressBar
                        android:id="@+id/opponent_progress"
                        android:layout_width="@dimen/choice_image_btn_width"
                        android:layout_height="@dimen/choice_image_btn_length"
                        android:paddingTop="5dp"
                        android:visibility="visible"
                        />
                    <ImageView
                        android:id="@+id/opponent_choice"
                        android:layout_width="@dimen/choice_image_btn_width"
                        android:layout_height="@dimen/choice_image_btn_length"
                        android:paddingTop="5dp"
                        android:visibility="gone"
                        />
                </LinearLayout>
            </LinearLayout>
            <TextView
                android:id="@+id/result"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center_horizontal"
                android:paddingTop="20dp"
                android:textStyle="bold"
                android:textSize="18sp"
                android:gravity="center_horizontal"
                />
            <ImageView
                android:id="@+id/resultImage"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_weight="2"
                android:layout_gravity="center_horizontal"
                android:scaleType="centerInside"
                android:contentDescription="@string/result_image_description"
                />
            <Button
                android:id="@+id/btn_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="doBack"
                android:enabled="false"
                android:text="@string/btn_go_back"
                />

        </LinearLayout>

    </ViewAnimator>

</LinearLayout>
