<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:orientation="vertical"
                tools:context="com.magnet.demo.mmx.rpsls.MainActivity">
    <ViewAnimator
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/viewAnimator"
        android:animateFirstView="true"
        android:inAnimation="@anim/slide_in_right"
        android:outAnimation="@anim/slide_out_left"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:orientation="vertical">
                <TextView
                    android:text="Hello, "
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"/>
                <TextView
                    android:id="@+id/username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:paddingTop="10dp"
                    android:paddingBottom="20dp"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:text="username"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:orientation="vertical">
                <TextView
                    android:text="Your record: "
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp"
                    android:orientation="horizontal">
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center_horizontal"
                        android:orientation="vertical">
                        <TextView
                            android:text="Wins"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="18sp"/>
                        <TextView
                            android:id="@+id/wins"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"
                            android:textSize="32sp"
                            android:textColor="@android:color/holo_green_dark"
                            android:text="Wins"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center_horizontal"
                        android:orientation="vertical">
                        <TextView
                            android:text="Losses"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="18sp"/>
                        <TextView
                            android:id="@+id/losses"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"
                            android:textSize="32sp"
                            android:textColor="@android:color/holo_red_dark"
                            android:text="Losses"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center_horizontal"
                        android:orientation="vertical">
                        <TextView
                            android:text="Draws"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="18sp"/>
                        <TextView
                            android:id="@+id/draws"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"
                            android:textSize="32sp"
                            android:textColor="@android:color/darker_gray"
                            android:text="Draws"/>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
            <Button
                android:id="@+id/btn_find_opponent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="doFindOpponent"
                android:text="@string/btn_find_opponent"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/find_opponent_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/label_available_players"
                />
            <ListView
                android:id="@+id/available_player_listview"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:padding="10dp"
                android:divider="@android:color/holo_red_dark"
                android:dividerHeight="1dp"
                android:choiceMode="multipleChoice"
                />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="doBack"
                    android:text="@string/btn_back"
                    />
                <Button
                    android:id="@+id/btn_invite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="doInvite"
                    android:text="@string/btn_invite"
                    android:enabled="false"
                    />
            </LinearLayout>

        </LinearLayout>
    </ViewAnimator>
</LinearLayout>
